# awsutils

./: README.md  pyproject.toml  setup.py
awsutils/: aws_credentials.py  boto3_client.py  image_s3_batch.py
src/awsutils/: image_s3_batch.py
