[build-system]
requires = ["hatchling", "boto3"]
build-backend = "hatchling.build"
[project]
name = "awsutils"
version = "0.0.3"
authors = [
  { name="Alexandros Giavaras", email="a.giavaras@gmail.com" },
]
description = "Various utilities for working with AWS in Python 3."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/pockerman/awsutils"
"Bug Tracker" = "https://github.com/pockerman/awsutils/issues"
